mule-user-guide/v/3.7/endpoint-configuration-reference.adoc
= 端点配置参考
:keywords: customize, customize endpoints

[NOTE]
====
本页讨论流级入站和出站端点的配置，这些端点是基于端点的Anypoint连接器的流级别元素。请注意，此页面上的信息均不适用于基于操作的连接器。有关一般连接器的更多信息，请参阅 link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]。
====

端点用于连接流。端点是流可以发送消息的特定通道，并且其他流或外部服务可以从该通道接收消息。例如，购买组件可能会通过HTTP接收订单请求。一旦组件处理了订单，可以通过主题发送JMS消息以通知审核系统，并且可以通过HTTP发回响应。

本页介绍如何配置端点。

== 基本配置

在最基本的形式中，端点充当 link:/mule-user-guide/v/3.7/connecting-using-transports[运输]及其基础数据源或消息通道的流级入站或出站实现。例如：

[%header%autowidth.spread]
|===
| *URI-Style Endpoints*

一个|

[source, xml, linenums]
----
<inbound-endpoint address="udp://localhost:65432"/>
 
<jetty:inbound-endpoint address="http://localhost:60211/mycomponent1" exchange-pattern="request-response" />
 
<outbound-endpoint address="smtp://user:secret@smtp.host"/>
 
<inbound-endpoint address="jms://test.queue"/>
----
|===

传统上，Mule ESB中的端点已被指定为 link:/mule-user-guide/v/3.7/mule-endpoint-uris[URI]，如上面的示例。这种形式仍然受到支持，并且实际上可能会根据您的应用程序而更加实际。但是，指定端点的推荐方法是通过特定于传输的名称空间，如以下示例所示。

[%header%autowidth.spread]
|===
| *Transport-Specific Endpoints*

一个|

[source, xml, linenums]
----
<file:inbound-endpoint path="./.mule/in"
comparator="org.mule.transport.file.comparator.OlderFirstComparator" reverseOrder="true"/>
 
<ssl:endpoint name="clientEndpoint" host="localhost" port="60198"/>
 
<jetty:endpoint name="serverEndpoint" host="localhost" port="60203" path="services/Foo" />
 
<imaps:endpoint name="global1s" host="localhost" password="secret" port="123" user="bob"/>
 
<rmi:endpoint name="BadType" host="localhost" port="1099" object="MatchingUMO" method="reverseString"/>
 
<quartz:endpoint name="qEP6" repeatCount="10" repeatInterval="1000" jobName="job"/>
 
<jms:inbound-endpoint queue="test.queue"/>
----
|===

== 动态端点

出站端点也可以是动态的。这意味着端点的URI是 link:/mule-user-guide/v/3.7/mule-expression-language-mel[表达]的值，在发送消息之前对其进行评估。这允许消息的目标由其内容或任何消息属性的值确定。动态端点可以使用上述任何一种端点格式。

[%header%autowidth.spread]
|===
| *Dynamic Endpoints*

一个| [source，xml，linenums]
----
<outbound-endpoint address="smtp://user:secret@#[message.outboundProperties['host']]"/>
 
<jms:outbound-endpoint host="localhost" queue="#[app.registry['defaultJmsQueue']]"/>
----
|===

不能动态的端点URI的唯一部分是该方案。不要这样做：

[%header%autowidth.spread]
|===
| *Illegal Dynamic Endpoint*

一个| [source，xml，linenums]
----
<outbound-endpoint address="#[message.inboundProperties['endpointType']]//localhost:8080/service"/>
----
|===

== 全局连接配置

在很多情况下，与端点关联的全局连接配置可以简单地假设为基于传输并隐式创建。但是，如果同一传输的多个全局连接器配置存在，或者使用了非默认设置，则必须使用`connector-ref`属性从端点引用连接器配置。

[%header%autowidth.spread]
|===
| *Specifying a Connector*

一个| [source，xml，linenums]
----
<inbound-endpoint address="tcp://localhost:65432" connector-ref="tcpConnector1"/>
<tcp:inbound-endpoint host="localhost" port="65433" connector-ref="tcpConnector2"/>
----
|===

== 属性

端点上的属性可用于自定义行为。可以使用端点上设置的任何属性来覆盖关联传输器连接器上的默认属性。例如，SMTP出站端点可能会将`fromAddress`属性设置为`workflow1`以覆盖`sysadmin`的默认连接器值。如果使用特定于传输的端点，则端点的任何标准属性都将作为XML模式中的属性提供。也可以指定一个非标准属性。例如：

[%header%autowidth.spread]
|===
| *Setting Properties*

一个| [source，xml，linenums]
----
<!-- Standard properties -->
<quartz:endpoint name="qEP6" repeatCount="10" repeatInterval="1000" jobName="job"/>
 
<!-- Non-standard properties -->
<quartz:endpoint name="qEP7" jobName="job2">
    <property key="actionOnTimeout" value="self-destruct"/>
    <property key="precision" value="2.5"/>
</quartz:endpoint>
----
|===

== 交易

事件可以在通过端点接收或发送事件时开始或提交。端点必须是同步的，并且交易支持在很大程度上取决于所使用的特定传输。有关更多信息，请参阅 link:/mule-user-guide/v/3.7/transaction-management[交易管理]。

[%header%autowidth.spread]
|===
| *Transaction Example*

一个| [source，xml，linenums]
----
<jms:inbound-endpoint queue="in">
    <jms:transaction action="BEGIN_OR_JOIN"/>
</jms:inbound-endpoint>
----
|===

== 编码

这是用于转换邮件内容的端点编码。对于入站端点，它用于将接收到的字节转换为字符。对于出站端点，它用于将要发送的字符转换为字节。如果端点上未设置编码，则使用Mule配置的默认编码。这是默认为UTF-8。

[%header%autowidth.spread]
|===
| *Encoding Example*

一个| [源，XML]
----
<inbound-endpoint address="tcp://localhost:65432" encoding="iso-8859-1"/>
----
|===

==  Mime类型

这是与端点消息关联的MIME类型。在入站端点上设置时，它指示传入消息的预期消息类型。接收不同MIME类型的消息会导致异常。在出站端点上设置时，结果是在所有传出消息上设置该MIME类型。

[%header%autowidth.spread]
|===
| *MimeType Example*

一个| [源，XML]
----
<inbound-endpoint address="tcp://localhost:65432" mimeType="text/xml"/>
----
|===

== 重新送货政策

可以在入站端点上定义重新传送策略。它类似于可以在JMS代理上设置的最大重新传递计数，并且解决了类似的问题：如果异常导致消息的读取反复回滚，如何避免无限循环？这是一个例子：

[%header%autowidth.spread]
|===
| *MimeType Example*

一个| [source，xml，linenums]
----
<flow name ="syncFlow" processing-strategy="synchronous">
    <file:inbound-endpoint path="/tmp/file2ftp/ftp-home/dirk">
        <idempotent-redelivery-policy maxRedeliveryCount="3">
            <dead-letter-queue>
                <vm:outbound-endpoint path="error-queue" />
            </dead-letter-queue>
        </idempotent-redelivery-policy>
    </file:inbound-endpoint>
    ...
----
|===

如果流程后面的某个内容抛出异常，则该文件将不会被使用，并且会被重新处理。幂等 - 再交付政策确保它不会再进行3次以上的再处理;之后，它被发送到`vm:error-queue`，在那里它可以作为错误情况处理。

== 在端点中嵌入消息处理器

以下消息处理器可嵌套在端点内：

* 变压器

* 过滤器

* 安全筛选器

* 聚合器

* 分配器

* 自定义消息处理器

您可以将任意数量的这些消息处理器作为子端点上的子元素（入站或出站），并按照它们列出的消息顺序应用于通过该端点的任何消息。

在同步出站端点的情况下，涉及响应消息，因此任何数量的消息处理器也可以放入响应包装器中，并按照列出的顺序应用于响应消息。

请注意，这些元素中的任何一个都可以在本地声明（即端点内联）或全局声明（并通过ref = "foo"属性引用）。

=== 变压器

可以在端点上配置 link:/mule-user-guide/v/3.7/using-transformers[变形金刚]，在端点上封装转换逻辑，然后根据需要重新使用它。

变形金刚在端点上使用子元素进行配置。在入站端点上进行配置时，它们用于转换端点接收到的消息，并且在出站端点上配置时，它们将用于在发送消息之前转换消息。

响应转换器可以在嵌套的`<response>`元素中进行配置。在入站端点上配置这些变换器时，这些变换器将在通过传输器发回之前应用于该消息，并且在出站端点上配置时，它们将应用于从出站端点的调用接收到的消息（如果有）。

与在端点上配置的所有消息处理器一样，它们的配置顺序也是它们的执行顺序。

[source,xml, linenums]
----
<inbound-endpoint address="file://./test-data/in">
  <xml-to-object-transformer/>
  <expression-filter expression=""/>
  <transformer ref="ExceptionBeanToErrorMessage"/>
  <response>
    <custom-transformer class=""/>   
  </response>
</inbound-endpoint>
----

在上面的示例中，您可以看到配置了两个请求转换器，其中一个在表达式过滤器之前执行，另一个在后面执行。在`<response>`元素中配置的自定义转换器将应用于响应消息。

尽管可以使用<transformer ref=""/>元素从端点引用全局定义的变换器，如上例所示，端点也支持快捷方式通知。

`transformer-refs`和`responseTransformer-refs`属性可用于快速轻松地引用全局端点。

[source,xml, linenums]
----
<inbound-endpoint address="file://./test-data/in" transformer-refs="globalTransformer1 globalTransformer2" responseTransformer-refs="globalTransformer2"/>
----

以这种方式引用的任何变换器都将添加到配置了子元素的消息处理器列表的末尾，因此最后执行。如果您需要它们在其他类似过滤器之前执行，或者需要将全局端点与本地定义的端点按特定顺序结合使用，请改为使用`<transformer>`元素。

=== 过滤器

一个端点可以包含一个过滤器来选择性地忽略某些消息过滤器可以是传输特定的，如JMS选择器或文件过滤器，也可以是通用过滤器，如JXPath。所有传输都不支持筛选，并且使用某些传输在端点上设置筛选会产生`UnsupportedOperationException`。有关更多信息，请参阅使用过滤器。

[%header%autowidth.spread]
|===
| *Filter Example*

一个| [source，xml，linenums]
----
<jms:endpoint queue="in.queue">
    <jms:selector expression="JMSPriority > 5"/>
</jms:endpoint>
 
<vm:endpoint name="fruitBowlEndpoint" path="fruitBowlPublishQ">
    <message-property-filter pattern="foo=bar"/>
</vm:endpoint>
----
|===

== 全球终端

全局端点虽然不是必需的，但对于组织良好的配置文件而言，建议使用最佳实践。全局端点可以被认为是共享端点配置的模板。全局端点可以按全局定义使用，也可以通过添加更多配置属性或元素进行扩展。

要引用全局端点，请使用通常的`<inbound-endpoint>`和`<outbound-endpoint>`元素，并使用`ref`属性指定全局端点名称。

[%header%autowidth.spread]
|===
| *Global endpoint example*

一个| [source，xml，linenums]
----
<file:endpoint name="fileReader" reverseOrder="true" comparator="org.mule.transport.file.comparator.OlderFirstComparator"/>
...cut...
 
  <flow name="Priority1">
        <file:inbound-endpoint ref="fileReader" path="/var/prio1"/>
        ...cut...
  </flow>
 
  <flow name="Priority2">
        <file:inbound-endpoint ref="fileReader" path="/var/prio2"/>
        ...cut...
  </flow>
----
|===

在上例中，`"fileReader"`端点用作入站端点的模板。属性`reverseOrder`和`comparator`只需要声明一次，并且每个入站端点的属性`path`都会更改。

== 自定义消息来源

您可以用自定义消息源替换流中的任何入站端点。这使您可以使用任何类作为流的消息源，包括连接器。您可以使用_ <custom-source> _元素配置自定义消息源。在元素中，您可以标识自定义源的类。您可以使用Spring bean属性进一步配置自定义消息源。

以下代码示例为流配置自定义消息源：

[source,xml, linenums]
----
<flow name="useMyCustomSource">
   <custom-source class="org.my.customClass">
      <spring:property name="threads" value="500"/>
   </custom-source>
   <vm:outbound-endpoint path="output" exchange-pattern="one-way"/>
</flow>
----

== 通用端点参考

以下参考表列出了可以为Mule中的 link:/mule-user-guide/v/3.7/generic-connector[通用终点]配置的属性。

== 入站端点

入站端点通过关联的传输接收消息。与全局端点一样，每个传输都实现自己的入站端点元素。

入站端点的=== 属性

[%header%autowidth.spread]
|===
| {名称{1}}说明
| `name`  |识别注册表中的端点。无需在入站或出站端点上设置“名称”属性，仅在全局端点上设置。 +
*Type*：`name (no spaces)` +
*Required*：否+
*Default*：无
| `ref`  |对全局端点的引用，用作构建此端点的模板。模板修复地址（协议，路径，主机等），并可以为各种属性指定初始值，但是可以在本地定义其他属性（只要它们不以任何方式更改地址）。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `address`  |此端点的通用地址。如果使用此属性，则必须将协议指定为URI的一部分。另外，大多数传输提供了自己的属性来指定地址（路径，主机等）。请注意，地址属性不能与'ref'或传输提供的替代属性组合。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `responseTimeout`  |如果进行同步端点调用+，响应超时
*Type*：`integer` +
*Required*：否+
*Default*：无
| `encoding`  |用于消息的字符串编码。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `connector-ref`  |与此端点关联的连接器的名称。如果为此传输定义了多个连接器，则必须指定此项。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `transformer-refs`  |在将消息传递到组件之前（按顺序）应用于消息的变换器列表。 +
*Type*：`list of names` +
*Required*：否+
*Default*：无
| `responseTransformer-refs`  |在通过传输返回之前应用（按顺序）同步响应的变换器列表。 +
*Type*：`list of names` +
*Required*：否+
*Default*：无
| `disableTransportTransformer`  |请勿使用与此端点传输相对应的默认入站/出站/响应变换器（如果有）。 +
*Type*：`boolean` +
*Required*：否+
*Default*：无
| `mimeType`  | MIME类型，例如`text/plain`或`application/json` +
*Type*：`string` +
*Required*：否+
*Default*：无
| `exchange-pattern`  | *Type*：`enumeration` +
*Required*：否+
*Default*：无
|===

入站端点的=== 子元素

[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
| `abstract-reconnection-strategy`  | 0..1  |重新连接策略元素的占位符。重新连接策略定义了Mule应该如何尝试处理连接失败。
| `abstract-multi-transaction`  | 0..1  |多事务元素的占位符。多事务允许一系列操作跨越不同的传输组合在一起，例如， JMS和JDBC，但没有XA的开销。权衡是XA可靠性保证不可用，并且服务必须准备好处理重复。这与1.5 PC概念非常相似。 EE专用功能。
| `response`  | {0..1 {3}}
| `abstract-redelivery-policy`  | 0..1  |重新送货政策的占位符。重新传送策略决定了重复传送同一条消息时要采取的措施。
| `abstract-transaction`  | 0..1  |事务元素的占位符。事务处理允许将一系列操作分组在一起。
| `abstract-transformer`  | 0..1  |变压器元件的占位符。变形金刚转换消息有效载荷。
| `abstract-filter`  | 0..1  |过滤元素的占位符，用于控制处理哪些消息。
| `abstract-security-filter`  | 0..1  |安全过滤器元素的占位符，用于控制对系统的访问。
| `abstract-intercepting-message-processor`  | 0..1  |拦截路由器元素的占位符。
| `abstract-observer-message-processor`  | 0..1  |消息处理器的占位符，用于观察消息但不会突变它用于记录日志。
| `processor`  | 0..1  |对其他地方定义的消息处理器的引用。
| `custom-processor`  | {0..1 {3}}
| `abstract-mixed-content-message-processor`  | 0..1  |消息处理器元素的占位符。
| `property`  | 0 .. *  |设置一个Mule属性。这是可以在组件，服务等上设置的名称/值对，它提供了配置系统的通用方法。通常情况下，您不需要像这样使用泛型属性，因为几乎所有的功能都是通过专用元素公开的。但是，它可以用于配置隐蔽或忽略的选项以及从通用端点元素配置传输。
| `properties`  | 0..1  | Mule属性的地图。
|===

== 出站端点

出站端点通过关联的传输器发送消息。与全局端点一样，每个传输都实现其自己的出站端点元素。

=== 出站端点的属性

[%header%autowidth.spread]
|===
| {名称{1}}说明
| `name`  |识别注册表中的端点。无需在入站或出站端点上设置“名称”属性，仅在全局端点上设置。 +
*Type*：`name (no spaces)` +
*Required*：否+
*Default*：无
| `ref`  |对全局端点的引用，用作构建此端点的模板。模板修复地址（协议，路径，主机等），并可以为各种属性指定初始值，但是可以在本地定义其他属性（只要它们不以任何方式更改地址）。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `address`  |此端点的通用地址。如果使用此属性，则必须将协议指定为URI的一部分。另外，大多数传输提供了自己的属性来指定地址（路径，主机等）。请注意，地址属性不能与'ref'或传输提供的替代属性组合。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `responseTimeout`  |如果进行同步端点调用+，响应超时
*Type*：`integer` +
*Required*：否+
*Default*：无
| `encoding`  |用于消息的字符串编码。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `connector-ref`  |与此端点关联的连接器的名称。如果为此传输定义了多个连接器，则必须指定此项。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `transformer-refs`  |在将消息传递到组件之前，按顺序应用消息的变换器列表。 +
*Type*：`list of names` +
*Required*：否+
*Default*：无
| `responseTransformer-refs`  |在通过传输器返回之前应用（按顺序）同步响应的变换器列表。 +
*Type*：`list of names` +
*Required*：否+
*Default*：无
| `disableTransportTransformer`  |请勿使用与此端点传输相对应的默认入站/出站/响应变换器（如果有）。 +
*Type*：`boolean` +
*Required*：否+
*Default*：无
| `mimeType`  | MIME类型，例如`text/plain`或`application/json` +
*Type*：`string` +
*Required*：否+
*Default*：无
| `exchange-pattern`  | *Type*：`enumeration` +
*Required*：否+
*Default*：无
|===

出站端点的=== 子元素

[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
| `abstract-reconnection-strategy`  | 0..1  |重新连接策略元素的占位符。重新连接策略定义了Mule应该如何尝试处理连接失败。
| `abstract-multi-transaction`  | 0..1  |多事务元素的占位符。多事务允许一系列操作跨越不同的传输组合在一起，例如JMS和JDBC，但没有XA的开销。权衡是XA可靠性保证不可用，并且服务必须准备好处理重复。这与1.5 PC概念非常相似。 EE专用功能。
| `response`  | {0..1 {3}}
| `abstract-redelivery-policy`  | 0..1  |重新送货政策的占位符。重新传送策略决定了重复传送同一条消息时要采取的措施。
| `abstract-transaction`  | 0..1  |事务元素的占位符。事务处理允许将一系列操作分组在一起。
| `abstract-transformer`  | 0..1  |变压器元件的占位符。变形金刚转换消息有效载荷。
| `abstract-filter`  | 0..1  |过滤元素的占位符，用于控制处理哪些消息。
| `abstract-security-filter`  | 0..1  |安全过滤器元素的占位符，用于控制对系统的访问。
| `abstract-intercepting-message-processor`  | 0..1  |拦截路由器元素的占位符。
| `abstract-observer-message-processor`  | 0..1  |消息处理器的占位符，用于观察消息但不会突变它用于记录日志。
| `processor`  | 0..1  |对其他地方定义的消息处理器的引用。
| `custom-processor`  | {0..1 {3}}
| `abstract-mixed-content-message-processor`  | 0..1  |消息处理器元素的占位符。
| `property`  | 0 .. *  |设置一个Mule属性。这是可以在组件，服务等上设置的名称/值对，它提供了配置系统的通用方法。通常情况下，您不需要像这样使用泛型属性，因为几乎所有的功能都是通过专用元素公开的。但是，它可以用于配置隐蔽或忽略的选项以及从通用端点元素配置传输。
| `properties`  | 0..1  | Mule属性的地图。
|===

== 端点

全局端点，充当可用于通过引用全局端点名称在配置中的其他位置构建入站或出站端点的模板。每个传输都使用更友好的语法来实现自己的端点元素，但是这个通用元素可以通过提供正确的地址URI来与任何传输一起使用。例如，"vm://foo"描述了一个VM传输端点。

=== 端点的属性

[%header%autowidth.spread]
|===
| {名称{1}}说明
| `name`  |标识端点，以便其他元素可以引用它。这个名字也可以在MuleClient中引用。 +
*Type*：`name (no spaces)` +
*Required*：是+
*Default*：无
| `ref`  |对全局端点的引用，用作构建此端点的模板。模板修复地址（协议，路径，主机等），并可以为各种属性指定初始值，但是可以在本地定义其他属性（只要它们不以任何方式更改地址）。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `address`  |此端点的通用地址。如果使用此属性，则必须将协议指定为URI的一部分。另外，大多数传输提供了自己的属性来指定地址（路径，主机等）。请注意，地址属性不能与'ref'或传输提供的替代属性组合。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `responseTimeout`  |如果进行同步端点调用+，响应超时
*Type*：`integer` +
*Required*：否+
*Default*：无
| `encoding`  |用于消息的字符串编码。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `connector-ref`  |与此端点关联的连接器的名称。如果为此传输定义了多个连接器，则必须指定此项。 +
*Type*：`string` +
*Required*：否+
*Default*：无
| `transformer-refs`  |在将消息传递到组件之前，按顺序应用消息的变换器列表。 +
*Type*：`list of names` +
*Required*：否+
*Default*：无
| `responseTransformer-refs`  |在通过传输器返回之前应用（按顺序）同步响应的变换器列表。 +
*Type*：`list of names` +
*Required*：否+
*Default*：无
| `disableTransportTransformer`  |请勿使用与此端点传输相对应的默认入站/出站/响应变换器（如果有）。 +
*Type*：`boolean` +
*Required*：否+
*Default*：无
| `mimeType`  | MIME类型，例如`text/plain`或`application/json` +
*Type*：`string` +
*Required*：否+
*Default*：无
| `exchange-pattern`  |  +
*Type*：`enumeration` +
*Required*：否+
*Default*：无
|===

端点的=== 子元素
[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
| `abstract-reconnection-strategy`  | 0..1  |重新连接策略元素的占位符。重新连接策略定义了Mule应该如何尝试处理连接失败。
| `abstract-multi-transaction`  | 0..1  |多事务元素的占位符。多事务允许一系列操作跨越不同的传输组合在一起，例如JMS和JDBC，但没有XA的开销。权衡是XA可靠性保证不可用，并且服务必须准备好处理重复。这与1.5 PC概念非常相似。 EE专用功能。
| `response`  | {0..1 {3}}
|抽象重新传送策略 | 0..1  |重新传送策略的占位符。重新传送策略决定了重复传送同一条消息时要采取的措施。
| `abstract-transaction`  | 0..1  |事务元素的占位符。事务处理允许将一系列操作分组在一起。
| `abstract-transformer`  | 0..1  |变压器元件的占位符。变形金刚转换消息有效载荷。
| abstract-filter  | 0..1  |过滤元素的占位符，用于控制处理哪些消息。
| `abstract-security-filter`  | 0..1  |安全过滤器元素的占位符，用于控制对系统的访问。
| `abstract-intercepting-message-processor`  | 0..1  |拦截路由器元素的占位符。
| `abstract-observer-message-processor`  | 0..1  |消息处理器的占位符，用于观察消息但不会改变它用于记录的消息。
| `processor`  | 0..1  |对其他地方定义的消息处理器的引用。
| `custom-processor`  | {0..1 {3}}
| `abstract-mixed-content-message-processor`  | 0..1  |消息处理器元素的占位符。
| `property`  | 0 .. *  |设置一个Mule属性。这是可以在组件，服务等上设置的名称/值对，它提供了配置系统的通用方法。通常情况下，您不需要像这样使用泛型属性，因为几乎所有的功能都是通过专用元素公开的。但是，它可以用于配置隐蔽或忽略的选项以及从通用端点元素配置传输。
| `properties`  | 0..1  | Mule属性的地图。
|===
